# obsqra.starknet

./: .agent_orchestrator.deployed  .cursorrules  .deployer_wallet.json  .env.sepolia  .gitignore  .gitignore.local  5_5_ZKML_OPERATIONAL.md  ACTION_PLAN_ETH.md  ACTUAL_FAILING_PROOF.md  ACTUAL_FAILING_PROOF_FOUND.md  AGENT_INSTRUCTIONS_CASM_HASH_FIX.md  AIR_CONFIGURATION_ANALYSIS.md  AIR_MISMATCH_ANALYSIS.md  ALLOCATION_EXECUTION_STATUS.md  ALLOCATION_FLOW_VERIFIED.md  ALLOCATION_ISSUE_EXPLAINED.md  APY_IMPLEMENTATION_STATUS.md  ARCHITECTURE.md  ARCHITECTURE_REALITY_CHECK.md  ARE_WE_FULLY_ZKML.md  ARGENT_ACCOUNT_ERROR_DEBUG.md  AUTHORIZATION_COMPLETE.md  BACKEND_COMPLETE.md  BACKEND_ORCHESTRATION_COMPLETE.md  BACKEND_TEST_RESULTS.md  BLOG_POST_OBSQRA_EVOLUTION.md  BRIDGE_ETH_TO_STARKNET.md  BUILD_ROADMAP.md  BUILTIN_ECDSA_ISSUE.md  BUILTIN_FIX_PLAN.md  BUILTIN_FIX_RESULTS.md  BUILTIN_MISMATCH_ANALYSIS.md  CANONICAL_AIR_FALLBACK.md  CANONICAL_AIR_STATUS.md  CANONICAL_AIR_TEST_PLAN.md  CANONICAL_AIR_TEST_RESULTS.md  CASM_MISMATCH_SOLUTION.md  CLARIFICATION_AND_DEPLOY.md  CLIENT_DELIVERY_REPORT_5M.md  CODE_CHANGES_SUMMARY.md  (+541 more)
ai-service/: README.md  config.py  contract_client.py  main.py  monitor.py  requirements.txt  risk_model.py
backend/: Dockerfile  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  main.py  requirements.txt  simple_test.py  test_server.py
contracts/: README.md  Scarb.toml  Scarb_fix.toml  accounts.json  deploy_fact_registry.sh  protocol_addresses_sepolia.json  snfoundry.toml
demo-frontend/: README.md  (+1 more)
luminair_prover/: Cargo.toml
(+664 files in other folders)
