[package]
name = "luminair_prover"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
sha3 = "0.10"

# LuminAIR dependencies (from parent workspace)
luminair_air = { path = "../luminair/crates/air" }
stwo = { git = "https://github.com/starkware-libs/stwo" }

[[bin]]
name = "risk_prover"
path = "src/main.rs"

